[gd_scene load_steps=5 format=3 uid="uid://bo38qmi4k27v2"]

[ext_resource type="Script" uid="uid://dn4j3mdeb4tyn" path="res://commons/scenes/mapobjects/AnnotationInfoBoard.gd" id="1_wlbfx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yc54e"]
bg_color = Color(0.12, 0.12, 0.12, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="BoxShape3D" id="BoxShape3D_hfp1n"]
size = Vector3(1.2, 1.6, 0.05)

[sub_resource type="ViewportTexture" id="ViewportTexture_y651h"]
viewport_path = NodePath("Viewport")

[node name="InfoBoard" type="Node3D"]
transform = Transform3D(-0.2, 0, -1.74846e-08, 0, 0.2, 0, 1.74846e-08, 0, -0.2, 0, 0, 0)
script = ExtResource("1_wlbfx")

[node name="Viewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(600, 800)

[node name="InfoBoardUI" type="Control" parent="Viewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPanel" type="Panel" parent="Viewport/InfoBoardUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yc54e")

[node name="LevelNumber" type="Label" parent="Viewport/InfoBoardUI/MainPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 60.0
offset_right = 150.0
offset_bottom = 230.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 140
text = "01"
horizontal_alignment = 1

[node name="LevelID" type="Label" parent="Viewport/InfoBoardUI/MainPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 230.0
offset_right = 150.0
offset_bottom = 260.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 18
text = "intro/01"
horizontal_alignment = 1

[node name="Separator" type="ColorRect" parent="Viewport/InfoBoardUI/MainPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -130.0
offset_right = 250.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.5, 0.5, 0.5, 1)

[node name="Title" type="Label" parent="Viewport/InfoBoardUI/MainPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 280.0
offset_right = 250.0
offset_bottom = 320.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 28
text = "Welcome to Ada Research"
horizontal_alignment = 1

[node name="Summary" type="Label" parent="Viewport/InfoBoardUI/MainPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 330.0
offset_right = 250.0
offset_bottom = 380.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 18
text = "A meta-quest into the world of algorithms"
autowrap_mode = 2

[node name="Barcode" type="Label" parent="Viewport/InfoBoardUI/MainPanel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "||||||||||||||||||||||||||||||||"
horizontal_alignment = 1

[node name="IconsContainer" type="HBoxContainer" parent="Viewport/InfoBoardUI/MainPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="XPLabel" type="Label" parent="Viewport/InfoBoardUI/MainPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 220.0
offset_bottom = -90.0
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "0"

[node name="HealthLabel" type="Label" parent="Viewport/InfoBoardUI/MainPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -120.0
offset_right = -20.0
offset_bottom = -90.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "Health: 100%"
horizontal_alignment = 2

[node name="Aperture" type="Label" parent="Viewport/InfoBoardUI/MainPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 14
text = "Ada Research"
horizontal_alignment = 1

[node name="Board" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_hfp1n")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.02246, 0)
texture = SubResource("ViewportTexture_y651h")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_exited"]
